fix(dataview-search): fixed wrong input widths & flex wrapping

--- a/styles/web/sass/core/widgets/_grid.scss
+++ b/styles/web/sass/core/widgets/_grid.scss
@@ -40,6 +40,7 @@
                 }
             }
             .mx-grid-search-input {
+                display: inline-flex;
                 .form-control {
                     height: 28px;
                     font-size: 11px;
@@ -58,8 +59,7 @@
     }
 }
 
-
-// Remove default border from grid inside a Mendix Dataview 
+// Remove default border from grid inside a Mendix Dataview
 .mx-dataview .mx-grid {
     border: 0;
 }
