--- a/styles/web/sass/core/widgets/_inputs.scss
+++ b/styles/web/sass/core/widgets/_inputs.scss
@@ -85,6 +85,7 @@ textarea.form-control {
     flex: 1;
     display: flex;
     flex-wrap: wrap;
+    max-width: 100%;
 
     .mx-validation-message {
         flex-basis: 100%;
